[tool.poetry]
name = "yarllib"
version = "0.1.0"
description = "Yet Another Reinforcement Learning Library"
authors = ["MarcoFavorito <marco.favorito@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "^1.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
