[tool.poetry]
name = "yarllib"
version = "0.2.0"
description = "Yet Another Reinforcement Learning Library"
authors = ["MarcoFavorito <marco.favorito@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://marcofavorito.github.io/yarllib"
repository = "https://github.com/marcofavorito/yarllib.git"
documentation = "https://marcofavorito.github.io/yarllib"
keywords = [
    "reinforcement learning",
    "framework",
    "openai gym",
]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
#packages = []
include = []

#[tool.poetry.scripts]
#script_name = 'path/to/script'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/marcofavorito/yarllib/issues"
"Pull Requests" = "https://github.com/marcofavorito/yarllib/pulls"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
pandas = "^1.4.2"
scipy = "^1.8.1"
gym = "^0.23.1"
Pillow = "^9.1.0"


[tool.poetry.dev-dependencies]
mkdocs-bibtex = { git = "https://github.com/marcofavorito/mkdocs-bibtex.git", branch = "master" }
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-randomly = "^3.12.0"
tox = "^3.25.0"
codecov = "^2.1.12"
mypy = "^0.950"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^22.4.25"
flake8-eradicate = "^1.2.1"
flake8-isort = "^4.1.1"
pylint = "^2.13.9"
safety = "^1.10.3"
vulture = "^2.4"
bandit = "^1.7.4"
mkdocs = "^1.3.0"
markdown-include = "^0.6.0"
mkdocs-material = "^8.2.15"
ipython = "^8.3.0"
jupyter = "^1.0.0"
mknotebooks = "^0.7.1"
Markdown = "^3.3.7"
black = "^22.3.0"
pygame = "^2.1.2"
urllib3 = "^1.26.5"
py = "^1.11.0"
Jinja2 = "^3.1.2"
PyYAML = "^6.0"
notebook = "^6.4.11"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
